--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
       <div class="field">
         <div class="three fields">
           <div class="field">
-            <label>SFH (Secure Form Handler)</label>
+            <label>SFH (Server Form Handler)</label>
             <div class="field">
               <div class="ui radio checkbox">
                 <input type="radio" name="sfh" value="-1" id="sfh-blank" />
@@ -195,7 +195,7 @@
           <li>
             Decision Tree Classifier : <strong>{{ prediction_RF }}</strong>
           </li>
-          <li>Grid SVC : <strong>{{ prediction_SVM }}</strong></li>
+          <li>Support Vector Classifier : <strong>{{ prediction_SVM }}</strong></li>
         </ul>
       </div>
       {% endif %}
