revisi value ip address terbalik

--- a/templates/index.html
+++ b/templates/index.html
@@ -164,8 +164,8 @@
             <label>Menggunakan Alamat IP</label>
             <div class="field">
               <div class="ui radio checkbox">
-                <input type="radio" name="ip_address" value="1" id="ip-legit" />
-                <label for="ip-legit">Ya</label>
+                <input type="radio" name="ip_address" value="0" id="ip-phishy" />
+                <label for="ip-phishy">Ya</label>
               </div>
             </div>
             <div class="field">
@@ -173,10 +173,10 @@
                 <input
                   type="radio"
                   name="ip_address"
-                  value="0"
-                  id="ip-phishy"
+                  value="1"
+                  id="ip-legit"
                 />
-                <label for="ip-phishy">Tidak</label>
+                <label for="ip-legit">Tidak</label>
               </div>
             </div>
           </div>
